2010-03-25  Tim Brown <timb@openvas.org>

	* openvas-libraries/misc/ids_send.c: Fixed uninitialised variable.

2010-03-25  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_resume_or_start_task_report, omp_resume_or_start_task):
	New functions.

	* omp/omp.h: Add headers accordingly.

2010-03-24  Michael Wiegand <michael.wiegand@intevation.de>

	Moved installation of header files away from top level Makefile and
	into the CMakeLists.txt of the individual modules.

	* omp/CMakeLists.txt, misc/CMakeLists.txt, nasl/CMakeLists.txt,
	hg/CMakeLists.txt, base/CMakeLists.txt: Added handling of header
	installation.

	* Makefile: Removed handling of header file installation for individual
	modules.

2010-03-23  Michael Wiegand <michael.wiegand@intevation.de>

	Fixed some library paths that broke linking.

	* omp/CMakeLists.txt: Removed superfluous .libs from link_directories.

	* nasl/CMakeLists.txt: Fixed IMPORTED_LOCATION for libopenvas_hg and
	libopenvas_base, corrected order of set_property.

	* hg/CMakeLists.txt: Removed entirely superfluous link_directories.

2010-03-21  Vlatko Kosturjak <kost@linux.hr>

	* Makefile: with distclean clean CMakeCache.txt recursively

2010-03-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:

	* misc/Makefile: Removed.

	* misc/CMakeLists.txt: New.

	* Makefile: Run cmake for library misc.

	* MANIFEST: Updated.

	* misc/openvas_ssh_login.c, misc/proctitle.c: Change <system.h>
	to "system.h" to run with CMakeLists.txt.

	* misc/services.h: Fixed paths.

2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:

	* hg/Makefile: Removed.

	* hg/CMakeLists.txt: New.

	* Makefile: Run cmake for library hg.

	* MANIFEST: Updated.

2010-03-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Patch contributed by Mareike Piechowiak <noplant@gmx.de>:
